@@ -16,6 +16,7 @@ no_AutoPrereq      = 1
 [Prereq / Runtime]
 perl                        = 5.008
 JSON::XS                    = 0
+Module::Pluggable           = 0
 POE                         = 1.292
 POE::Component::Client::DNS = 0.99
 POE::Component::IRC::State  = 6.45
